# OddsSync

./: Cargo.toml  Dockerfile  README.md  compose.yml  run.bash
.cargo/: config.toml
contract/: Cargo.toml
contract/src/: betting_pool.rs  lib.rs  market_factory.rs  types.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: CreateMarket.tsx  LoadingSpinner.tsx  MarketCard.tsx  MarketFilters.tsx  MarketList.tsx  Methods.tsx  WalletConnect.tsx
frontend/src/lib/: graphql.ts  linera-adapter.ts  linera.ts
scripts/: deploy_conway.sh  test_conway.sh
service/: Cargo.toml
service/src/: lib.rs
service/src/graphql/: mod.rs  resolvers.rs  schema.rs
shared/: Cargo.toml
shared/src/: lib.rs  market_factory.rs  types.rs
