[package]
name = "contract"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"] # Added "rlib"

[dependencies]
linera-sdk = { version = "0.15.7", default-features = false }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.38.0", default-features = false, features = ["macros", "sync"] }
async-graphql = { version = "7.0.17", default-features = false }
linera-views = "0.15.7"
shared = { path = "../shared" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1