[package]
name = "service"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
linera-sdk = "0.15.0"
async-graphql = { version = "7.0.17", default-features = false, features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
futures = "0.3"

[profile.release]
opt-level = 'z'
lto = true