[package]
name = "service"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
linera-sdk = { version = "0.15.7", default-features = false, features = ["service"] }
async-graphql = { version = "7.0.17", default-features = false, features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
futures = "0.3"
shared = { path = "../shared", features = ["service"] } # Enable "service" feature
serde_json = "1.0.145"

[profile.release]
opt-level = 'z'
lto = true